Fixed issue with new task overlapping

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -44,6 +44,7 @@ body {
       .input-group {
         padding: 2em;
         color: black;
+        z-index: 0;
         margin-bottom: 3em;
         ::placeholder {
           color: black;
